--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resilora - Give Love for Saving World Animals</title>
+  <title>Resilora - Extend A Hand To Aid After Natural Disasters</title>
 
   <!-- 
     - favicon
